gateway/postinstall/dp/status-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: "2.8"
    kong-metrics: "kong-admin"
  name: kong-kong-status
  namespace: kong
spec:
  ports:
  - appProtocol: http
    name: kong-status
    port: 8100
    protocol: TCP
    targetPort: 8100
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: dp-kong
    app.kubernetes.io/name: kong
  sessionAffinity: None
  type: ClusterIP
